<?xml version="1.0" encoding="utf-8"?>
<ScrollView

 xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1F347F"
    android:scrollbarSize="19dp"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Aqui va el contenido de la activity -->



        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logopequenio" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/fotomoto" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:srcCompat="@drawable/fotocamion"
            android:scaleType="centerCrop"

            tools:layout_editor_absoluteX="0dp" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:srcCompat="@drawable/fotocoche"
            android:scaleType="centerCrop"

            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="227dp"
            android:layout_height="69dp"
            android:text="@string/permisoa1_a2_motocicleta"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.597"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="227dp"
            android:layout_height="69dp"
            android:text="@string/permiso_c1_c_cami_n"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.597"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.802" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="227dp"
            android:layout_height="69dp"
            android:text="@string/permiso_b_tursimo"
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.597"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            app:layout_constraintVertical_bias="0.753" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>